Fixed scrollbar issue blocking text on mobile

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -65,7 +65,7 @@ h3 {
 }
 
 /*Add a Checkmark */
-.box::before {
+/* .box::before {
     content: '';
     position: absolute;
     border-color: #fff;
@@ -77,6 +77,7 @@ h3 {
     margin-top: 25px;
     margin-left: 10px;
 }
+*/
 
 .tasks {
     display: flex;
@@ -174,4 +175,13 @@ span {
     left: 50%;
     color: rgba(255, 255, 255, 1);
     opacity: 1.0
+}
+
+.task {
+    overflow: auto;
+}
+
+#tasklist {
+    width: 375px;
+    height: 400px;
 }
